--- a/ISO/boot/grub/grub.cfg
+++ b/ISO/boot/grub/grub.cfg
@@ -1,6 +1,6 @@
 set timeout=0
 set default=0
 
-menuentry "UrMumOS" {
-   multiboot /boot/kernel
+menuentry "ThanOS" {
+   multiboot /boot/ThanOS
 }
